--- a/src/index.html
+++ b/src/index.html
@@ -1,19 +1,557 @@
+<!-- #region head -->
 <!doctype html>
-<html lang="en">
+<html
+  lang="en"
+  class="page"
+>
   <head>
     <meta charset="UTF-8" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Title</title>
+    <link
+      rel="preconnect"
+      href="https://fonts.googleapis.com"
+    />
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <title>Museum</title>
     <link
       rel="stylesheet"
       href="./styles/main.scss"
     />
+    <link
+      rel="icon shortcut"
+      href="./images/icons/icon-logo.png"
+    />
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <!-- #endregion head -->
+  <body class="page__body page__body--header">
+    <header
+      class="header"
+      id="top"
+    >
+      <div class="top-bar">
+        <div class="top-bar__icons">
+          <a
+            href="#menu"
+            class="icon icon--menu"
+          ></a>
+        </div>
+      </div>
+
+      <div class="header__image">
+        <a
+          href="#menu"
+          class="header__logo-link"
+        >
+          <img
+            src="images/icons/icon-logo.png"
+            alt="icon logotype of NA MU"
+            class="header__logo"
+          />
+          />
+        </a>
+      </div>
+
+      <div class="header__description">
+        <h1 class="header__description--title">ХУДОЖНІЙ МУЗЕЙ</h1>
+
+        <div class="header__description__buttons">
+          <a
+            href="#events"
+            class="header__description--events-link"
+          >
+            <p class="header__description--events">Події</p>
+          </a>
+
+          <div class="header__description--tickets">
+            <p class="header__description--tickets--text">Квитки</p>
+            <a
+              href="#events"
+              class="header__description--tickets--button"
+            >
+              <img
+                class="icon icon--swipe"
+                src="./images/icons/icon-arrow.png"
+                alt="swipe"
+              />
+            </a>
+          </div>
+        </div>
+      </div>
+    </header>
+
+    <aside
+      class="menu page__menu"
+      id="menu"
+    >
+      <nav class="nav menu__nav">
+        <div class="menu__part1">
+          <div class="top-bar menu__top-bar">
+            <div class="top-bar__icons">
+              <a
+                href="#"
+                class="icon icon--close"
+              ></a>
+            </div>
+          </div>
+          <ul class="nav__list">
+            <li class="nav__item">
+              <a
+                href="#gallery"
+                class="nav__link"
+              >
+                Галерея
+              </a>
+              <a
+                href="#events"
+                class="nav__link"
+              >
+                Виставки та
+                <br />
+                події
+              </a>
+            </li>
+            <li class="nav__item">
+              <a
+                href="#subscription"
+                class="nav__link"
+              >
+                Про Нас
+              </a>
+              <a
+                href="#contacts"
+                class="nav__link"
+              >
+                Контакти
+              </a>
+            </li>
+          </ul>
+        </div>
+        <ul class="menu__schedule">
+          <li class="menu__schedule--title">Графік роботи</li>
+          <li class="menu__schedule--week">
+            <div class="menu__schedule--week-days">
+              <strong>12:00 — 20:00</strong>
+              середa
+              <br />
+              <strong>12:00 — 20:00</strong>
+              четвер
+              <br />
+              <strong>12:00 — 20:00</strong>
+              п’ятниця
+              <br />
+              <strong>11:00 — 19:00</strong>
+              субота
+              <br />
+              <strong>11:00 — 19:00</strong>
+              неділя
+              <br />
+            </div>
+            <div class="menu__schedule--holidays">
+              <p class="menu__schedule--holidays--text">
+                <strong>Вихідні:</strong>
+                понеділок, вівторок
+              </p>
+              <p class="menu__schedule--holidays--text">
+                Каса припиняє роботу за 1 годину до закриття музею
+              </p>
+            </div>
+          </li>
+        </ul>
+      </nav>
+    </aside>
+
+    <main class="main page__main">
+      <section
+        class="actual"
+        id="events"
+      >
+        <title class="section__title">Актуальні події</title>
+
+        <article class="actual__event">
+          <img
+            src="./images/pictures/actual-lake.png"
+            alt="image of lake"
+            class="actual__image"
+          />
+
+          <div class="actual__info">
+            <div class="actual__date-event">
+              <p class="actual__date-event--text">ВИСТАВКА</p>
+              <p class="actual__date-event--date">26.08-29.11.2019</p>
+            </div>
+
+            <div class="actual__event__title">
+              <p class="actual__event__title--text">Йду і повертаюсь</p>
+
+              <img
+                src="./images/icons/icon-rectangle.png"
+                alt="red square"
+                class="actual__event__title--icon"
+              />
+            </div>
+            <p class="actual__event__description">
+              Національний Художній Музей України презентує унікальну частину
+              колекції Градобанку - українське мистецтво другої половини
+              1980-1995 років.
+            </p>
+          </div>
+        </article>
+
+        <article class="actual__event">
+          <img
+            src="./images/pictures/actual-bird.png"
+            alt="image of bird"
+            class="actual__image"
+          />
+
+          <div class="actual__info">
+            <div class="actual__date-event">
+              <p class="actual__date-event--text">ВИСТАВКА</p>
+              <p class="actual__date-event--date">26.08-29.11.2019</p>
+            </div>
+
+            <div class="actual__event__title">
+              <p class="actual__event__title--text">І спогади і мрії</p>
+
+              <img
+                src="./images/icons/icon-rectangle.png"
+                alt="red square"
+                class="actual__event__title--icon"
+              />
+            </div>
+            <p class="actual__event__description">
+              Національний художній музей України до 100 річчя від дня
+              народження видатної української художниці Тетяни Яблонської
+              відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+            </p>
+          </div>
+        </article>
+
+        <img
+          src="./images/pictures/actual-sunset.png"
+          alt="image of sunset"
+          class="actual__image--sunset"
+        />
+        <div class="actual__short-card">
+          <div class="actual__short-card__lection">
+            <div class="actual__short-card__date-event">
+              <p class="actual__short-card__date-event--text">ЛЕКЦІЯ</p>
+              <p class="actual__short-card__date-event--date">
+                26/08/2019 - 11:00
+              </p>
+            </div>
+            <title class="actual__short-card__title">
+              Від класицизму до романтизму
+            </title>
+          </div>
+        </div>
+      </section>
+
+      <section
+        class="gallery"
+        id="gallery"
+      >
+        <title class="section__title">Галерея</title>
+
+        <div class="gallery__slider">
+          <div class="slider">
+            <div class="slides-container">
+              <div class="imgs_slides">
+                <input
+                  type="radio"
+                  name="radio-btn"
+                  id="radio1"
+                  checked
+                />
+                <input
+                  type="radio"
+                  name="radio-btn"
+                  id="radio2"
+                />
+                <input
+                  type="radio"
+                  name="radio-btn"
+                  id="radio3"
+                />
+                <input
+                  type="radio"
+                  name="radio-btn"
+                  id="radio4"
+                />
+                <div class="first slide">
+                  <img
+                    src="./images/pictures/gallery-ukranian.png"
+                    alt="gallery picture of ukranian"
+                  />
+                </div>
+                <div class="slide">
+                  <img
+                    src="./images/pictures/gallery-village.png"
+                    alt="gallery picture of village"
+                  />
+                </div>
+                <div class="slide">
+                  <img
+                    src="./images/pictures/gallery-park.png"
+                    alt="gallery picture of park"
+                  />
+                </div>
+                <div class="slide">
+                  <img
+                    src="./images/pictures/gallery-sea.png"
+                    alt="gallery picture of sea"
+                  />
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="gallery__navigation">
+          <div class="navigation-container">
+            <div class="navigation">
+              <label
+                for="radio1"
+                class="navigation-btn"
+              ></label>
+              <label
+                for="radio2"
+                class="navigation-btn"
+              ></label>
+              <label
+                for="radio3"
+                class="navigation-btn"
+              ></label>
+              <label
+                for="radio4"
+                class="navigation-btn"
+              ></label>
+            </div>
+          </div>
+        </div>
+        <div class="gallery__photos">
+          <div class="gallery__photos-2">
+            <img
+              class="gallery__photos-img gallery__photos-img--height"
+              src="./images/pictures/gallery-ukranian.png"
+              alt="gallery picture of ukranian"
+            />
+            <img
+              class="gallery__photos-img gallery__photos-img--width"
+              src="./images/pictures/gallery-village.png"
+              alt="gallery picture of village"
+            />
+          </div>
+          <div class="gallery__photos-4">
+            <img
+              class="gallery__photos-img gallery__photos-img--width"
+              src="./images/pictures/gallery-park.png"
+              alt="gallery picture of park"
+            />
+            <img
+              class="gallery__photos-img gallery__photos-img--height"
+              src="./images/pictures/gallery-sea.png"
+              alt="gallery picture of sea"
+            />
+          </div>
+        </div>
+      </section>
+    </main>
+
+    <footer class="footer">
+      <section
+        class="subscription"
+        id="subscription"
+      >
+        <div class="subscription__content">
+          <div class="subscription__content__text">
+            <title class="subscription__content__text--title">Підписка</title>
+            <p class="subscription__content__text--descr">
+              Бути в курсі всіх актуальних подій та останніх новин.
+            </p>
+          </div>
+          <form
+            action="#"
+            class="subscription__form"
+          >
+            <input
+              type="email"
+              placeholder="E-mail"
+              class="subscription__input"
+              required
+            />
+            <button
+              type="submit"
+              name="subscription"
+              class="btn"
+            >
+              <span class="btn__square btn__square--secondary">
+                <img
+                  class="icon icon--swipe--sub"
+                  src="./images/icons/icon-arrow.png"
+                  alt="swipe"
+                />
+              </span>
+            </button>
+          </form>
+        </div>
+      </section>
+
+      <section class="footer__details">
+        <div class="footer__details__image">
+          <a
+            href="#menu"
+            class="footer__logo-link"
+          >
+            <img
+              src="images/icons/icon-logo.png"
+              alt="icon logotype of NA MU"
+              class="footer__logo"
+            />
+            />
+          </a>
+
+          <div class="footer__top-bar"></div>
+          <div class="footer__top-bar__icons">
+            <a
+              href="https://uk-ua.facebook.com/"
+              class="icon icon--facebook"
+            ></a>
+            <a
+              href="https://www.instagram.com/"
+              class="icon icon--instagram"
+            ></a>
+          </div>
+        </div>
+
+        <ul class="footer__schedule">
+          <li class="footer__schedule--title">Графік роботи</li>
+          <li class="footer__schedule--week">
+            <div class="footer__schedule--week-days">
+              <strong>12:00 — 20:00</strong>
+              середa
+              <br />
+              <strong>12:00 — 20:00</strong>
+              четвер
+              <br />
+              <strong>12:00 — 20:00</strong>
+              п’ятниця
+              <br />
+              <strong>11:00 — 19:00</strong>
+              субота
+              <br />
+              <strong>11:00 — 19:00</strong>
+              неділя
+              <br />
+            </div>
+            <div class="footer__schedule--holidays">
+              <p class="footer__schedule--holidays--text">
+                <strong>Вихідні:</strong>
+                понеділок, вівторок
+              </p>
+              <p class="footer__schedule--holidays--text">
+                Каса припиняє роботу за 1 годину до закриття музею
+              </p>
+            </div>
+          </li>
+        </ul>
+
+        <ul class="footer__contacts">
+          <li class="footer__contacts--title">Контакти:</li>
+          <li class="footer__contacts--item">
+            <a
+              href="https://www.google.com/search?q=%D0%B2%D1%83%D0%BB.+%D0%9C.+%D0%93%D1%80%D1%83%D1%88%D0%B5%D0%B2%D1%81%D1%8C%D0%BA%D0%BE%D0%B3%D0%BE%2C+6%3B+%D0%9A%D0%B8%D1%97%D0%B2%2C+01001&oq=%D0%B2%D1%83%D0%BB.+%D0%9C.+%D0%93%D1%80%D1%83%D1%88%D0%B5%D0%B2%D1%81%D1%8C%D0%BA%D0%BE%D0%B3%D0%BE%2C+6%3B+%D0%9A%D0%B8%D1%97%D0%B2%2C+01001&gs_lcrp=EgZjaHJvbWUyBggAEEUYOTIHCAEQABiABDIKCAIQABiABBiiBDIKCAMQABiABBiiBDIKCAQQABiABBiiBDIGCAUQRRg9MgYIBhBFGD0yBggHEEUYPdIBBzk4MWowajSoAgCwAgE&sourceid=chrome&ie=UTF-8"
+              class="footer__contacts--link"
+            >
+              вул. М. Грушевського, 6; Київ, 01001
+            </a>
+          </li>
+          <li class="footer__contacts--item">
+            <a
+              href="tel:+380442781357"
+              class="footer__contacts--link"
+            >
+              тел. +38 (044) 278-13-57
+            </a>
+          </li>
+          <li class="footer__contacts--item">
+            <a
+              href="tel:+380442787454"
+              class="footer__contacts--link"
+            >
+              факс +38 (044) 278-74-54
+            </a>
+          </li>
+          <li class="footer__contacts--item">
+            <a
+              href="mailto:info@namu.kiev.ua"
+              class="footer__contacts--link"
+            >
+              e-mail: info@namu.kiev.ua
+            </a>
+          </li>
+        </ul>
+        <a
+          href="#top"
+          class="footer__back-to-top"
+        >
+          <span class="footer__btn__circle footer__btn__circle--back-to-top">
+            <span class="icon icon--arrow-up"></span>
+          </span>
+        </a>
+        <nav class="nav footer__nav">
+          <ul class="footer__nav__list">
+            <li class="footer__nav__item">
+              <a
+                href="#gallery"
+                class="footer__nav__link"
+              >
+                Галерея
+              </a>
+              <a
+                href="#events"
+                class="footer__nav__link"
+              >
+                Виставки та
+                <br />
+                події
+              </a>
+            </li>
+            <li class="footer__nav__item">
+              <a
+                href="#subscription"
+                class="footer__nav__link"
+              >
+                Про Нас
+              </a>
+              <a
+                href="#contacts"
+                class="footer__nav__link"
+              >
+                Контакти
+              </a>
+            </li>
+          </ul>
+        </nav>
+
+        <div class="footer__copyright">
+          <p class="footer__copyright--text">Designed by Alina Luchytska</p>
+          <p class="footer__copyright--text">
+            Copyright © 2024. All Rights Reserved.
+          </p>
+        </div>
+      </section>
+    </footer>
+
     <script src="scripts/main.js"></script>
   </body>
 </html>
