--- a/src/index.html
+++ b/src/index.html
@@ -1,19 +1,465 @@
 <!doctype html>
-<html lang="en">
+<html
+  lang="en"
+  class="page"
+>
   <head>
     <meta charset="UTF-8" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Title</title>
+    <title>NAMY</title>
     <link
       rel="stylesheet"
       href="./styles/main.scss"
     />
+    <link
+      href="https://fonts.googleapis.com/css?family=Montserrat:regular,500,600,700,800,900"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:regular,500,600,700"
+      rel="stylesheet"
+    />
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <body class="page__body">
+    <header
+      class="header"
+      id="top-page"
+    >
+      <div class="header__top top-bar">
+        <div class="top-bar__content">
+          <a
+            href="#menu"
+            class="top-bar__icon icon icon--menu"
+          ></a>
+          <a
+            href="#"
+            class="top-bar__logo"
+          >
+            NA
+            <br />
+            MY
+          </a>
+        </div>
+      </div>
+      <div class="header__image"></div>
+      <div class="header__content">
+        <h1 class="header__title">ХУДОЖНІЙ МУЗЕЙ</h1>
+        <a
+          href="#events"
+          class="header__btn button button--green"
+        >
+          <span class="button__text">КВИТКИ</span>
+          <span class="button__icon">
+            <span class="icon icon--arrow"></span>
+          </span>
+        </a>
+        <div class="header__vertical-conteiner">
+          <div class="header__vertical-text">ПОДІЇ</div>
+          <div class="header__vertical-line"></div>
+        </div>
+      </div>
+    </header>
+
+    <aside
+      class="page__menu menu"
+      id="menu"
+    >
+      <div class="menu__container">
+        <div class="menu__content">
+          <div class="menu__top">
+            <a
+              href="#top-page"
+              class="menu__icon icon icon--close"
+            ></a>
+            <ul class="menu__list">
+              <li class="menu__item">
+                <a
+                  href="#gallery"
+                  class="menu__link"
+                >
+                  Галерея
+                </a>
+              </li>
+              <li class="menu__item">
+                <a
+                  href="#about-us"
+                  class="menu__link"
+                >
+                  Про Нас
+                </a>
+              </li>
+              <li class="menu__item">
+                <a
+                  href="#events"
+                  class="menu__link"
+                >
+                  Виставки та події
+                </a>
+              </li>
+              <li class="menu__item">
+                <a
+                  href="#contants"
+                  class="menu__link"
+                >
+                  Контакти
+                </a>
+              </li>
+            </ul>
+          </div>
+
+          <div class="menu__bottom">
+            <h2 class="menu__subtitle">Графік роботи</h2>
+            <div class="menu__schedule">
+              <strong>12:00 — 20:00</strong>
+              середа
+              <br />
+              <strong>12:00 — 20:00</strong>
+              четвер
+              <br />
+              <strong>12:00 — 20:00</strong>
+              п’ятниця
+              <br />
+              <strong>11:00 — 19:00</strong>
+              субота
+              <br />
+              <strong>11:00 — 19:00</strong>
+              неділя
+            </div>
+            <div class="menu__schedule">
+              <strong>Вихідні:</strong>
+              понеділок, вівторок Каса припиняє роботу за 1 годину до закриття
+              музею
+            </div>
+          </div>
+        </div>
+      </div>
+    </aside>
+
+    <main class="main">
+      <section
+        class="events"
+        id="events"
+      >
+        <div class="events__content">
+          <h2 class="section-title">Актуальні події</h2>
+          <article class="events__event event">
+            <div class="event__photo">
+              <img
+                src="./images/img-1.png"
+                alt="picture 1"
+                class="event__img"
+              />
+            </div>
+            <div class="event__content">
+              <div class="event__date-event">
+                <div class="event__name">ВИСТАВКА</div>
+                <div class="event__value">26.08-29.11.2019</div>
+              </div>
+              <h3 class="event__title">Йду і повертаюсь</h3>
+              <p class="event__describe">
+                Національний Художній Музей України презентує унікальну частину
+                колекції Градобанку - українське мистецтво другої половини
+                1980-1995 років.
+              </p>
+            </div>
+          </article>
+          <article class="events__event event">
+            <div class="event__photo">
+              <img
+                src="./images/img-2.png"
+                alt="picture 1"
+                class="event__img"
+              />
+            </div>
+            <div class="event__content">
+              <div class="event__date-event">
+                <div class="event__name">ВИСТАВКА</div>
+                <div class="event__value">26.08-29.11.2019</div>
+              </div>
+              <h3 class="event__title">І спогади і мрії</h3>
+              <p class="event__describe">
+                Національний художній музей України до 100 річчя від дня
+                народження видатної української художниці Тетяни Яблонської
+                відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+              </p>
+            </div>
+          </article>
+        </div>
+        <article class="events__event event event--big">
+          <div class="event__photo">
+            <img
+              src="./images/big-img.png"
+              alt="picture 3"
+              class="event__img"
+            />
+          </div>
+          <div class="event__box">
+            <div class="event__content">
+              <div class="event__date-event">
+                <div class="event__name">ЛЕКЦІЯ</div>
+                <div class="event__value">26/08/2019 - 11:00</div>
+              </div>
+              <h3 class="event__title">Від класицизму до романтизму</h3>
+            </div>
+          </div>
+        </article>
+      </section>
+
+      <section
+        class="gallery"
+        id="gallery"
+      >
+        <div class="gallery__container">
+          <h2 class="gallery__title section-title">Галерея</h2>
+          <div class="gallery__swiper swipper">
+            <input
+              type="radio"
+              name="slider"
+              id="slider1"
+              class="swipper__input swipper__input--1"
+              checked
+            />
+            <input
+              type="radio"
+              name="slider"
+              id="slider2"
+              class="swipper__input swipper__input--2"
+            />
+            <input
+              type="radio"
+              name="slider"
+              id="slider3"
+              class="swipper__input swipper__input--3"
+            />
+            <input
+              type="radio"
+              name="slider"
+              id="slider4"
+              class="swipper__input swipper__input--4"
+            />
+            <div class="swipper__slides">
+              <div
+                class="swipper__slide"
+                id="slide1"
+              >
+                <img
+                  src="./images/img-3.png"
+                  class="swipper__img"
+                  alt="gallery photo"
+                />
+              </div>
+              <div
+                class="swipper__slide"
+                id="slide2"
+              >
+                <img
+                  src="./images/img-4.png"
+                  class="swipper__img"
+                  alt="gallery photo"
+                />
+              </div>
+              <div
+                class="swipper__slide"
+                id="slide3"
+              >
+                <img
+                  src="./images/img-5.png"
+                  class="swipper__img"
+                  alt="gallery photo"
+                />
+              </div>
+              <div
+                class="swipper__slide"
+                id="slide4"
+              >
+                <img
+                  src="./images/img-6.png"
+                  class="swipper__img"
+                  alt="gallery photo"
+                />
+              </div>
+            </div>
+
+            <div class="swipper__navigation">
+              <label
+                class="swipper__button"
+                for="slider1"
+              ></label>
+              <label
+                class="swipper__button"
+                for="slider2"
+              ></label>
+              <label
+                class="swipper__button"
+                for="slider3"
+              ></label>
+              <label
+                class="swipper__button"
+                for="slider4"
+              ></label>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section
+        class="subscribe"
+        id="about-us"
+      >
+        <div class="subscribe__container">
+          <h2 class="subscribe__title section-title section-title--white">
+            Підписка
+          </h2>
+          <p class="subscribe__text">
+            Бути в курсі всіх актуальних подій та останніх новин.
+          </p>
+          <form
+            action="#top-page"
+            class="subscribe__form"
+          >
+            <input
+              type="email"
+              placeholder="E-mail"
+              class="subscribe__field"
+              required
+            />
+            <button
+              type="submit"
+              class="subscribe__button"
+            >
+              <span class="icon icon--arrow-dark"></span>
+            </button>
+          </form>
+        </div>
+      </section>
+    </main>
+    <footer class="footer">
+      <div class="footer__top">
+        <a
+          href="#top-page"
+          class="footer__logo"
+        >
+          NA
+          <br />
+          MY
+        </a>
+        <div class="footer__social-media">
+          <a
+            href="https://www.facebook.com/NAMUkraine/"
+            class="icon icon--fb"
+          ></a>
+          <a
+            href="https://www.instagram.com/namu.museum/?igsh=MXQ4aHF4Mno2emhucA%3D%3D"
+            class="icon icon--insta"
+          ></a>
+        </div>
+      </div>
+      <div class="footer__schedule">
+        <h3 class="footer__subtitle">Графік роботи</h3>
+        <div class="footer__block">
+          <strong>12:00 — 20:00</strong>
+          середа
+          <br />
+          <strong>12:00 — 20:00</strong>
+          четвер
+          <br />
+          <strong>12:00 — 20:00</strong>
+          п’ятниця
+          <br />
+          <strong>11:00 — 19:00</strong>
+          субота
+          <br />
+          <strong>11:00 — 19:00</strong>
+          неділя
+          <br />
+          <br />
+          <strong>Вихідні:</strong>
+          понеділок, вівторок Каса припиняє роботу за 1 годину до закриття музею
+        </div>
+      </div>
+      <div
+        class="footer__contacts"
+        id="contacts"
+      >
+        <h3 class="footer__subtitle">Контакти:</h3>
+        <div class="footer__block">
+          <a
+            href="#"
+            class="footer__link"
+          >
+            вул. М. Грушевського, 6; Київ, 01001
+          </a>
+          <a
+            href="tel:+380442781357"
+            class="footer__link"
+          >
+            тел. +38 (044)
+            <span>278-13-57</span>
+          </a>
+          <a
+            href="fax:+380442787454"
+            class="footer__link"
+          >
+            факс +38 (044)
+            <span>278-74-54</span>
+          </a>
+          <a
+            href="mailto:info@namu.kiev.ua"
+            class="footer__link"
+          >
+            e-mail:
+            <span>info@namu.kiev.ua</span>
+          </a>
+        </div>
+      </div>
+      <a
+        href="#top-page"
+        class="footer__link-back"
+      >
+        <span class="icon icon--arrow-up"></span>
+      </a>
+      <ul class="footer__menu">
+        <li class="footer__item">
+          <a
+            href="#gallery"
+            class="footer__link"
+          >
+            Галерея
+          </a>
+        </li>
+        <li class="footer__item">
+          <a
+            href="#about-us"
+            class="footer__link"
+          >
+            Про Нас
+          </a>
+        </li>
+        <li class="footer__item">
+          <a
+            href="#events"
+            class="footer__link"
+          >
+            Виставки та події
+          </a>
+        </li>
+        <li class="footer__item">
+          <a
+            href="#contants"
+            class="footer__link"
+          >
+            Контакти
+          </a>
+        </li>
+      </ul>
+      <div class="footer__copyright">
+        <p>Copyright © 2019. All Rights Reserved.</p>
+        <p>Designed by Zhyriada Marina</p>
+      </div>
+    </footer>
     <script src="scripts/main.js"></script>
   </body>
 </html>
